# gamedao-protocol

./: .dockerignore  .editorconfig  .env.local.backup.2025-06-26T21-12-57-467Z  .env.local.backup.2025-06-28T22-30-40-264Z  .env.local.backup.2025-06-29T00-31-24-833Z  .gitignore  .gitlab-ci.yml  .gitmodules  .npmrc  CODE_OF_CONDUCT.md  Cargo.dev.toml  Cargo.toml  Dockerfile  HEADER-APACHE2  HEADER-GPL3  Makefile  README.md  SECRET.md  ZERO.md  aggregate_types.js  arm64.Dockerfile  docker-compose.graph.yml  docker-compose.yml  env.local.template  env.template  makefile  package-lock.json  package.json  pnpm-lock.yaml  turbo.json  vercel.json
.builder/: .env.sample  Dockerfile  arm64.Dockerfile  docker-compose.yml  genesis-keys.sh  subzero.Dockerfile  x86-builder.Dockerfile  x86.Dockerfile
.builder/bootnodes/: readme.md
.builder/specs/: staging.json
.builder/validators/: readme.md
.github/ISSUE_TEMPLATE/: epic.md  story.md
.github/workflows/: ci.yml  frontend-tests.yml  rust-clippy.yml  rust.yml  solidity-tests.yml  status-badge.yml
.turbo/daemon/: a5d5ac12ec92ae65-turbo.log.2025-06-20
battlepass/: Cargo.toml  readme.md
battlepass/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
control/: Cargo.toml  README.md  types.json
control/src/: benchmarking.rs  lib.rs  migration.rs  mock.rs  tests.rs  types.rs  weights.rs
data/: README.md
docker/hardhat-node/: .dockerignore  Dockerfile  entrypoint.sh
docker/scripts/: initNode.sh
docs/: GOVERNANCE_SETTINGS.md  IMPLEMENTATION_STATUS.md  LOGGER_FLOODING_FIX.md  MEMBERSHIP_FILTERING_FIX.md  MIGRATION_PLAN.md  ORGANIZATION_CREATION_FIX.md  README.md  SECURITY.md  frontend-roadmap.md
docs/architecture/: membership-architecture.md
docs/development/: 250721-address-sync-strategy.md  250721-end-to-end-completeness-analysis.md  250728-vercel-deployment-plan.md  250728-vercel-deployment-quick-start.md  250731-signal-integration-analysis.md  250925-vercelDeploymentLaunchPlan.md  README.md  editor-notes.md  end-to-end-integration.md  getting-started.md  packages-shared-integration.md
docs/gips/: README.md  template.md
docs/legacy-archive/: CONTRACT_MANAGEMENT.md  README.md
docs/product/: README.md
docs/protocol/: README.md
docs/reports/: gamedao-v3-status-report.md
docs/soneium-relaunch/: 001-intro.md  002-blurb.md  003-roadmap.md  004-timing-features-requirements.md  005-feature-set.md  006-general-briefing.md  README.md
docs/worklog/: 004-milestone-plan.md  008-sense-module.md  009-graph-frontend-phase.md  010-frontend-development-plan.md  011-frontend-fixes-and-graph-setup.md  013-frontend-architecture-overhaul.md  014-contract-infrastructure-upgrade.md  015-infrastructure-backlog.md  016-frontend-theme-fixes.md  017-frontend-network-integration-plan.md  018-scaffolding-integration.md  019-tokenomics-analysis.md  100-frontend-assessment-and-plan.md  101-phase-1-foundation-and-standards.md  109-unified-settings-and-conventions.md  110-phase-1-section-1-completed.md  111-phase-1-section-2-routes.md  112-phase-1-section-2-completed.md  113-url-structure-consolidation.md  114-frontend-bug-fixes-and-cleanup.md  115-deployment-stabilization.md  116-public-beta-deployment-plan.md  117-signing-vs-onchain-ops.md  118-privy-paymaster-integration.md  119-did-game-method.md  120-execution-status-and-test-plan.md  README.md  contract-simplification-strategy.md  frontend-assessment-and-plan.md  frontend-completion-plan.md
flow/: Cargo.toml  README.md  types.json
flow/src/: benchmarking.rs  lib.rs  migration.rs  mock.rs  tests.rs  types.rs  weights.rs
governance/: Cargo.toml  types.json
governance/src/: lib.rs  types.rs
logs/: 000-init.md  001-technical-analysis.md  002-monorepo-setup.md  003-control-module.md  004-milestone-plan.md  005-implementation-status.md  006-flow-module.md  007-signal-module.md  008-sense-module.md  009-graph-frontend-phase.md  012-signal-integration-and-frontend-fixes.md
modules/: aggregate_types.js  readme.md
modules/control/: Cargo.toml  readme.md  types.json
modules/control/src/: lib.rs  tests.rs
modules/crowdfunding/: Cargo.toml  README.md  types.json
modules/crowdfunding/src/: campaign.bkp2.rs  campaign.rs  campaign_tests.rs  constants.rs  errors.rs  factory.rs  lib.rs  lib_.rs  request.rs  tests.rs  treasury.rs  treasury_tests.rs
modules/flow/: Cargo.toml  types.json
modules/flow/src/: lib.rs
modules/governance/: Cargo.toml  types.json
modules/governance/src/: default_weights.rs  lib.rs
modules/hypaspace/: Cargo.toml  types.json
modules/hypaspace/src/: lib.rs  mock.rs
modules/item/: Cargo.toml  types.json
modules/nft/: Cargo.toml
modules/nft-factory/: Cargo.toml
modules/primitives/: Cargo.toml
modules/primitives/src/: lib.rs
modules/rfc/: curve.md  zero-balances.md  zero-curve.rs  zero-escrow.md  zero-event-bus.md  zero-loot-drop.rs
modules/sense/: Cargo.toml  readme.md
modules/signal/: Cargo.toml  types.json
modules/skillz/: Cargo.toml  readme.md
modules/skillz/src/: lib.rs
modules/synapse/: Cargo.toml  readme.md
modules/synapse/src/: lib.rs
modules/tangram/: Cargo.toml  types.json
modules/tangram/src/: lib.rs  nft.rs  tests.rs
modules/uniq/: Cargo.toml  types.json
modules/uniq/src/: lib.rs  mock.rs
scripts/: bump.js  test-ci.sh  update-contract-addresses.js  vercel-deployment-checklist.js
sense/: Cargo.toml  README.md  types.json
sense/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
signal/: Cargo.toml  README.md
signal/src/: benchmarking.rs  lib.rs  migration.rs  mock.rs  tests.rs  traits.rs  types.rs  voting_enums.rs  voting_structs.rs  weights.rs
src/: identity.ts  membership.ts
support/: Cargo.toml
support/src/: lib.rs
tangram/: Cargo.toml
tangram-rmrk/: Cargo.toml
tangram-rmrk/src/: lib.rs
tangram/src/: benchmarking.rs  lib.rs  mock.rs  nft.rs  tests.rs  weights.rs
traits/: Cargo.toml
traits/src/: lib.rs
treasury/: Cargo.toml
treasury/src/: lib.rs
zero/crowdfunding/: Cargo.toml  types.json
zero/crowdfunding/src/: factory.rs  lib.rs  request.rs
(+55 files in other folders)
