#      _______  ________  ________  ________   ______   _______   _______
#    ╱╱       ╲╱        ╲╱        ╲╱        ╲_╱      ╲╲╱       ╲╲╱       ╲╲
#   ╱╱      __╱         ╱         ╱         ╱        ╱╱        ╱╱        ╱╱
#  ╱       ╱ ╱         ╱         ╱        _╱         ╱         ╱         ╱
#  ╲________╱╲___╱____╱╲__╱__╱__╱╲________╱╲________╱╲___╱____╱╲________╱
#
# This file is part of GameDAO Protocol.
# Copyright (C) 2018-2023 GameDAO AG.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "gamedao-battlepass"
version = "1.3.0"
authors = ["zero.io","gamedao.co"]
repository = "https://github.com/gamedaoco/gamedao-protocol"
edition = "2018"
license = "GPL-3.0-or-later"
description = "BATTLEPASS provides tokenized fan engagement functionality."

[dependencies]
serde = { version = "1.0.143", default-features = false }
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
sp-core = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sp-std = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sp-storage = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0", default-features=false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0", default-features = false, optional = true }

pallet-uniques = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }

orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", tag = "polkadot-v1.1.0", default-features = false }

gamedao-control = { package = "gamedao-control", path = "../control", default-features = false }
gamedao-traits = { package = "gamedao-traits", path = "../traits", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive"] }

pallet-balances = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
pallet-uniques = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
orml-currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0", default-features = false }
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0", default-features = false }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0", default-features = false }

[features]
default = ['std']
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"gamedao-traits/runtime-benchmarks",
	"gamedao-control/runtime-benchmarks"
]
std = [
    "serde/std",
    'codec/std',
    "scale-info/std",

	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",

	"sp-std/std",

	"pallet-balances/std",

	"orml-traits/std",
	"orml-tokens/std",
	"orml-currencies/std",

	"pallet-uniques/std",

	"gamedao-control/std",
	"gamedao-traits/std",
]
try-runtime = ["frame-support/try-runtime"]
