# ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
# ███░▄▄▄█░▄▄▀█░▄▀▄░█░▄▄█░▄▀█░▄▄▀█▀▄▄▀██
# ███░█▄▀█░▀▀░█░█▄█░█░▄▄█░█░█░▀▀░█░██░██
# ███▄▄▄▄█▄██▄█▄███▄█▄▄▄█▄▄██▄██▄██▄▄███
# ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
[package]
name = "gamedao-flow"
version = "1.0.1-dev"
authors = ["zero.io","gamedao.co"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Simple Crowdfunding module, supporting multiple campaigns, which are all settled with the platform currency."
repository = "https://github.com/gamedaoco/gamedao-protocol"

[dependencies]
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.3.1", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false, optional = true }

orml-traits = { path = "../../orml/traits", default-features = false }
orml-tokens = { path = "../../orml/tokens", optional = true }
orml-currencies = { path = "../../orml/currencies", optional = true }

gamedao-traits = { package = "gamedao-traits", path = "../traits", default-features = false }
gamedao-control = { package = "gamedao-control", path = "../control", optional = true }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
frame-support-test = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }

pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }

gamedao-control = { package = "gamedao-control", path = "../control", default-features = true }

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking",
	"gamedao-traits/frame-benchmarking",
]
std = [
	"codec/std",
	"serde/std",
	"scale-info/std",

	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",

	"sp-core/std",
	"sp-std/std",
	"sp-runtime/std",

	"orml-traits/std",
	"orml-tokens/std",
	"orml-currencies/std",

	"gamedao-traits/std",
	"gamedao-control/std",
]
try-runtime = ["frame-support/try-runtime"]
